tests/__snapshots__/validation-when-action-chain-stderr.snap.txt
Error: The final element in the chain must be an action.

  2 | 
  3 | test("the final element must be an action", () => {
  4 |   when();
    |   ~~~~~~
  5 | 
  6 |   expect<string>().type.toBe<string>();
  7 | });

      at ./__typetests__/action-chain.tst.ts:4:3

Error: The action must be called with an argument.

   8 | 
   9 | test("must be called with an argument", () => {
  10 |   when().isCalledWith;
     |   ~~~~~~~~~~~~~~~~~~~
  11 | 
  12 |   expect<string>().type.toBe<string>();
  13 | });

       at ./__typetests__/action-chain.tst.ts:10:3

